Remove entry stream file system API
Assisted-by: codex:gpt-5.5